Commit purge_schedule and submit_expire_airing scripts

--- a/logging.conf
+++ b/logging.conf
@@ -1,6 +1,6 @@
 ; This is a sample configuration.
 [loggers]
-keys=root,SubmitLogger
+keys=root,SubmitLogger,SchedulePurger
 
 [handlers]
 keys=consoleHandler,logfileHandler
@@ -16,6 +16,12 @@ handlers=consoleHandler
 level=INFO
 handlers=consoleHandler
 qualname=SubmitLogger
+propagate=0
+
+[logger_SchedulePurger]
+level=INFO
+handlers=consoleHandler
+qualname=SchedulePurger
 propagate=0
 
 [handler_consoleHandler]
