--- a/local-submit.properties
+++ b/local-submit.properties
@@ -1,7 +1,7 @@
 [section]
+log.conf.path=logging.conf
 mongo.uri=mongodb://localhost/unified
 mongo.collection=Airing
-days.threshold=31
+days.threshold=40
 mongo.query={"id": {"$ne": null}, "at": {"$lt": "days.threshold"}}
-mongo.sort=[{"at" : 1},{"_pub": 1}]
 submit.path=script/submit
